# deploy-with-render

./: Pipfile  build.sh  pyproject.toml  start.sh
mysite/: settings.py
