[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Peter-Immanuel <peterbemshima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.10"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
setuptools = "^65.3.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
